<resources>
    <string name="app_name">Today</string>
    <string name="imageDescription">(display icon description)</string>

    <string name="menuLogOut">Log out</string>
    <string name="hardcodeWeather">Hardcode location</string>
    <string name="refreshWeather">Refresh weather</string>
    <string name="refreshCalendar">Refresh calendar</string>
    <string name="refreshNews">Refresh headlines</string>

    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="registerBtn">Register</string>
    <string name="signInBtn">Sign In</string>
    <string name="registerExpand">Register</string>
    <string name="pName">First name</string>
    <string name="authSign">Signing in…</string>
    <string name="authReg">Registering you…</string>

    <string name="forecast">Forecast</string>
    <string name="temperature">Temperature</string>
    <string name="highsLows">Highs/lows</string>
    <string name="windSpeed">Wind speed</string>
    <string name="lastWUpdate">last updated</string>
    <string name="weatherError">Something went wrong…</string>

    <string name="calTitle">Calendar | happening today…</string>
    <string name="calError">"Couldn't retrieve calendar…"</string>
    <string name="calEmpty">Calendar | nothing today!</string>
    <string name="event">Event</string>

    <string name="newsTitle">News | headlines…</string>
    <string name="headlinePlaceholder">Headline</string>
    <string name="newsError">"Couldn't retrieve headlines…"</string>

    <string name="alarmTitle">ALARMS</string>
    <string name="alarmHomeTitle">Alarms</string>
    <string name="alarmAddTitle">NEW ALARM</string>
    <string name="alarmEmpty">No alarms…</string>
    <string name="hourHint">23</string>
    <string name="timeSep">:</string>
    <string name="minuteHint">59</string>
    <string name="labelHint">Alarm label (length 100)</string>
    <string name="repeatOn">Repeat every…</string>
    <string name="Mon">Monday</string>
    <string name="Tues">Tuesday</string>
    <string name="Wed">Wednesday</string>
    <string name="Thurs">Thursday</string>
    <string name="Fri">Friday</string>
    <string name="Sat">Saturday</string>
    <string name="Sun">Sunday</string>

    <string name="alarmLabel">Alarm label</string>
    <string name="alarmTime">00:00</string>
    <string name="alarmGreet">Good morning!</string>
</resources>
