<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAlarm">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/alarmBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageView
        android:id="@+id/alarmIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintStart_toEndOf="@+id/alarmBack"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <TextView
        android:id="@+id/alarmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/alarmAdd"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/alarmIcon"
        app:layout_constraintTop_toTopOf="@+id/alarmIcon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/hour"
        android:layout_width="85dp"
        android:layout_height="73dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/alarmBack"
        android:hint="@string/hourHint"
        android:autofillHints="hour" />

    <EditText
        android:id="@+id/minute"
        android:layout_width="85dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/alarmBack"
        android:hint="@string/minuteHint"
        android:autofillHints="minute" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/daysGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hour">

        <CheckBox
            android:id="@+id/chkMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <CheckBox
            android:id="@+id/chkTues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tues"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chkMon"/>
        <CheckBox
            android:id="@+id/chkWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chkTues"/>
        <CheckBox
            android:id="@+id/chkThurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thurs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chkWed"/>
        <CheckBox
            android:id="@+id/chkFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fri"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chkThurs"/>
        <CheckBox
            android:id="@+id/chkSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chkFri"/>
        <CheckBox
            android:id="@+id/chkSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chkSat"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/alarmSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.constraintlayout.widget.ConstraintLayout>