<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmSystem">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/alarmBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/alarmAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <ImageView
        android:id="@+id/alarmIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toBottomOf="@+id/alarmBack"
        app:layout_constraintStart_toEndOf="@+id/alarmBack"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <TextView
        android:id="@+id/alarmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/alarmTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/alarmIcon"
        app:layout_constraintStart_toEndOf="@+id/alarmIcon"
        app:layout_constraintTop_toTopOf="@+id/alarmIcon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alarmGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarmBack">

        <TextView
            android:id="@+id/alarmEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmEmpty"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/alarmGroup" />

        <ProgressBar
            android:id="@+id/alarmLoad"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/alarmGroup" />

        <TableLayout
            android:id="@+id/alarmTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/alarmGroup" >
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarmGroup">

        <View
            android:id="@+id/addSep"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FF909090"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintGuide_begin="206dp" />

        <EditText
            android:id="@+id/hour"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autofillHints="hour"
            android:ems="10"
            android:hint="@string/hourHint"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/addSep" />

        <EditText
            android:id="@+id/minute"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints="minute"
            android:ems="10"
            android:hint="@string/minuteHint"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/hour" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/daysGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hour">

            <CheckBox
                android:id="@+id/chkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/chkTues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tues"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chkMon" />

            <CheckBox
                android:id="@+id/chkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chkTues" />

            <CheckBox
                android:id="@+id/chkThurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Thurs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chkWed" />

            <CheckBox
                android:id="@+id/chkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fri"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chkThurs" />

            <CheckBox
                android:id="@+id/chkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chkFri" />

            <CheckBox
                android:id="@+id/chkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sun"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chkSat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/alarmLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Alarm label (length 100)"
            android:hint="@string/labelHint"
            android:inputType="textAutoCorrect"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/daysGroup" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/alarmSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#00FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/alarmLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>