<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9D00"
    tools:context=".AlarmActivity">

    <ImageView
        android:id="@+id/alarmIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alarmwhite" />

    <ImageView
        android:id="@+id/stopAlarm"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="84dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@+id/alarmIcon"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/alarmIcon"
        app:layout_constraintTop_toBottomOf="@+id/alarmLabel"
        app:srcCompat="@drawable/cancel" />

    <TextView
        android:id="@+id/alarmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/alarmLabel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/alarmIcon"
        app:layout_constraintStart_toStartOf="@+id/alarmIcon"
        app:layout_constraintTop_toBottomOf="@+id/alarmIcon" />

    <TextView
        android:id="@+id/alarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/alarmTime"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/alarmIcon"
        app:layout_constraintEnd_toEndOf="@+id/alarmIcon"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="@+id/alarmIcon" />
</androidx.constraintlayout.widget.ConstraintLayout>